
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/clander" >

        <Button
            android:id="@+id/browse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="54dp"
            android:onClick="onClick"
            android:background="@drawable/searchx" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/browse"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="46dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="text" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText3"
            android:layout_marginBottom="15dp"
            android:layout_toLeftOf="@+id/browse"
            android:text="@string/time" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView3"
            android:layout_alignLeft="@+id/editText3"
            android:layout_marginBottom="17dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="text" >
            <requestFocus />
            </EditText>



        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText2"
            android:layout_marginBottom="17dp"
            android:layout_toLeftOf="@+id/browse"
            android:text="@string/name" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView2"
            android:layout_alignLeft="@+id/editText2"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            android:ems="10"
            android:gravity="center"
            android:inputType="none|text" >
        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText1"
            android:layout_alignRight="@+id/textView2"
            android:layout_marginBottom="15dp"
            android:text="@string/date" />

        <Button
            android:id="@+id/new_practical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/browse"
            android:layout_alignBottom="@+id/browse"
            android:layout_alignLeft="@+id/textView1"
            android:onClick="onClick"
            android:background="@drawable/savex" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/browse"
            android:layout_alignBottom="@+id/browse"
            android:layout_alignRight="@+id/editText3"
            android:background="@drawable/cancelx"
            android:onClick="onClick" />
        

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/new_practical"
            android:layout_below="@+id/new_practical"
            android:text="@string/set"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignLeft="@+id/browse"
            android:text="@string/browse"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView5"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignRight="@+id/cancel"
            android:text="@string/cancel"
            android:textColor="#000000" />

    </RelativeLayout>
