<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome" >

    <EditText
        android:id="@+id/current_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="text" />

    <Button
        android:id="@+id/go_to_view_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/current_date"
        android:layout_below="@+id/current_date"
        android:layout_marginTop="60dp"
        android:background="@drawable/showallx"
        android:onClick="onClick" />

    <Button
        android:id="@+id/go_to_add_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/current_date"
        android:layout_alignTop="@+id/go_to_view_all"
        android:background="@drawable/gototoday"
        android:onClick="onClick" />

    <Button
        android:id="@+id/go_to_calander"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/go_to_add_new"
        android:layout_centerHorizontal="true"
        android:background="@drawable/gotocalendar"
        android:onClick="onClick" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/go_to_view_all"
        android:layout_marginTop="73dp"
        android:layout_toRightOf="@+id/go_to_calander"
        android:background="@drawable/exit"
        android:onClick="onClick" />

    <Button
        android:id="@+id/gotosettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/go_to_add_new"
        android:layout_alignTop="@+id/button_exit"
        android:layout_marginLeft="32dp"
        android:background="@drawable/settingsx"
        android:onClick="onClick" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/go_to_add_new"
        android:layout_below="@+id/go_to_add_new"
        android:text="@string/add_new"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/go_to_view_all"
        android:layout_below="@+id/go_to_view_all"
        android:text="@string/view_all"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:text="@string/calander_page"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_exit"
        android:layout_below="@+id/button_exit"
        android:text="@string/exit"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/gotosettings"
        android:text="@string/settings"
        android:textColor="#000000" />

</RelativeLayout>
