
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/editview" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textColor="#000000"
        android:text="@string/date" />

    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView1"
        android:layout_marginBottom="52dp"
        android:layout_marginRight="18dp"
        android:onClick="onClick"
        android:background="@drawable/okiconx"/>

    <EditText
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp"
        android:ems="10"
		android:gravity="center"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_centerVertical="true"
        android:text="@string/time"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignLeft="@+id/time"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="text" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/name"
        android:layout_alignLeft="@+id/textView1"
        android:layout_marginBottom="17dp"
        android:textColor="#000000"
        android:text="@string/name" />

    <EditText
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/name"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="text" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit"
        android:layout_alignBottom="@+id/edit"
        android:layout_alignParentRight="true"
        android:layout_marginRight="35dp"
        android:background="@drawable/cancelx"
        android:onClick="onClick" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/edit"
            android:layout_below="@+id/cancel"
            android:layout_marginTop="14dp"
            android:text="@string/set"
            android:textColor="#000000" />

         <TextView
             android:id="@+id/textView36"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/textView33"
             android:layout_alignBottom="@+id/textView33"
             android:layout_alignRight="@+id/cancel"
             android:text="@string/cancel"
             android:textColor="#000000" />

</RelativeLayout>
